Update main.pdf and recovered.pdf